CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Adj_Pmt_Id_Not_Deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Adj_Pmt_Id_Not_Deletable</fullName>
    <active>true</active>
    <description>Adjustment Payment Id once created cannot be deleted</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) , 
ISCHANGED( Name ) 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Adjustment Payment Id once created cannot be deleted</errorMessage>
</ValidationRule>