CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Adm_Action_Not_Deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Adm_Action_Not_Deletable</fullName>
    <active>true</active>
    <description>Record once created , Action Admin cannot be changed</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( CDE_ACTION_ADMIN__c )
)</errorConditionFormula>
    <errorDisplayField>CDE_ACTION_ADMIN__c</errorDisplayField>
    <errorMessage>Record once created , Action Admin cannot be changed</errorMessage>
</ValidationRule>