CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Amt_Not_Deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Amt_Not_Deletable</fullName>
    <active>false</active>
    <description>once Record is Created, Amount is not deletable</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( AMT_PMT_ADJMT__c )
)</errorConditionFormula>
    <errorDisplayField>AMT_PMT_ADJMT__c</errorDisplayField>
    <errorMessage>once Record is Created, Amount is not deletable</errorMessage>
</ValidationRule>