CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Case_Not_Deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Not_Deletable</fullName>
    <active>true</active>
    <description>Once the record is created , it is not deletable</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( IDN_CASE__c )
)</errorConditionFormula>
    <errorDisplayField>IDN_CASE__c</errorDisplayField>
    <errorMessage>Once the record is created , it is not deletable</errorMessage>
</ValidationRule>