CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Check_Number_Not_deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Number_Not_deletable</fullName>
    <active>true</active>
    <description>Once the record is Created, Check Number cannot be deleted</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( TXT_NBR_CHECK_PMT__c )
)</errorConditionFormula>
    <errorDisplayField>TXT_NBR_CHECK_PMT__c</errorDisplayField>
    <errorMessage>Once the record is Created, Check Number cannot be deleted</errorMessage>
</ValidationRule>