CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Date_Paid_not_deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Paid_not_deletable</fullName>
    <active>true</active>
    <description>Once the Record is created, Date Paid is not deletable</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( DTE_PMT_ADJMT__c )
)</errorConditionFormula>
    <errorDisplayField>DTE_PMT_ADJMT__c</errorDisplayField>
    <errorMessage>Once the Record is created, Date Paid is not deletable</errorMessage>
</ValidationRule>