CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Payment_Not_Deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Not_Deletable</fullName>
    <active>true</active>
    <description>Record once created , Payment cannot be changed</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) , 
ISCHANGED( IDN_PMT__c ) 
)</errorConditionFormula>
    <errorDisplayField>IDN_PMT__c</errorDisplayField>
    <errorMessage>Record once created , Payment cannot be changed</errorMessage>
</ValidationRule>