CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Paymnt_Type_Not_deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>Paymnt_Type_Not_deletable</fullName>
    <active>true</active>
    <description>Once the Record is created, Payment Type cannot be changed</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( CDE_TYPE_PMT_ADJMT__c )
)</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_PMT_ADJMT__c</errorDisplayField>
    <errorMessage>Once the Record is created, Payment Type cannot be changed</errorMessage>
</ValidationRule>