CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Provider_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Not_Editable</fullName>
    <active>true</active>
    <description>Once the record is Created, provider cannot be edited</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( IDN_PROVR__c )
)</errorConditionFormula>
    <errorDisplayField>IDN_PROVR__c</errorDisplayField>
    <errorMessage>Once the record is Created, provider cannot be edited</errorMessage>
</ValidationRule>