CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/ReceiptNumber_Not_deletable.validationRule-meta.xml
<ValidationRule>
    <fullName>ReceiptNumber_Not_deletable</fullName>
    <active>true</active>
    <description>Once Record is Created , Receipt Number cannot be deleted</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( IDN_RCPT_PMT__c )
)</errorConditionFormula>
    <errorDisplayField>IDN_RCPT_PMT__c</errorDisplayField>
    <errorMessage>Once Record is Created , Receipt Number cannot be deleted</errorMessage>
</ValidationRule>