CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Require_AdmAction_If_PymntType_AdmAction.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_AdmAction_If_PymntType_AdmAction</fullName>
    <active>true</active>
    <description>Require Administrative Action based on Payment Type</description>
    <errorConditionFormula>AND( ISPICKVAL(CDE_TYPE_PMT_ADJMT__c,&apos;5&apos;) , ISBLANK(TEXT(CDE_ACTION_ADMIN__c))	 )</errorConditionFormula>
    <errorDisplayField>CDE_ACTION_ADMIN__c</errorDisplayField>
    <errorMessage>Administrative Action field is must for Payment Type = &apos;Administrative Action&apos;.</errorMessage>
</ValidationRule>