CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Require_Check_Number_If_PymntType_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Check_Number_If_PymntType_Check</fullName>
    <active>true</active>
    <description>Check Number is must for Payment Type = &apos;Check&apos;</description>
    <errorConditionFormula>AND( ISPICKVAL(CDE_TYPE_PMT_ADJMT__c,&apos;2&apos;), ISBLANK(TXT_NBR_CHECK_PMT__c ))</errorConditionFormula>
    <errorDisplayField>TXT_NBR_CHECK_PMT__c</errorDisplayField>
    <errorMessage>Check Number is must for Payment Type = &apos;Check&apos;</errorMessage>
</ValidationRule>