CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/validationRules/Txt_Info_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Txt_Info_cannot_be_changed</fullName>
    <active>true</active>
    <description>TXT_INFO_OTHER cannot be changed</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( TXT_INFO_OTHER__c )
)</errorConditionFormula>
    <errorDisplayField>TXT_INFO_OTHER__c</errorDisplayField>
    <errorMessage>TXT_INFO_OTHER cannot be changed</errorMessage>
</ValidationRule>