CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDN_CASE__c</field>
        <operation>equals</operation>
        <value>11262872</value>
    </filters>
    <filters>
        <field>IDN_EXTNL__c</field>
        <operation>equals</operation>
        <value>1565328</value>
    </filters>
    <label>All</label>
</ListView>