CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT__c/listViews/Datafix_User_CDOR_payment.listView-meta.xml
<ListView>
    <fullName>Datafix_User_CDOR_payment</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>IDN_CASE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>57631</value>
    </filters>
    <label>Datafix User CDOR payment</label>
</ListView>